# minimal-act-policy

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
assets/: bimanual_viperx_ee_transfer_cube.xml  bimanual_viperx_transfer_cube.xml  piper_dependencies.xml  piper_left.xml  piper_right.xml  scene.xml
src/mact/: __main__.py  constants.py  dataset.py  policy.py  train.py  utils.py
src/mact/detr/: main.py
src/mact/detr/models/: __init__.py  backbone.py  detr_vae.py  position_encoding.py  transformer.py  util.py
src/mact/sim/: __init__.py  constants.py  ee_sim_env.py  record.py  scripted_policy.py  sim_env.py
