[project]
name = "mact"
version = "0.1.0"
dependencies = []
requires-python = ">=3.13"
authors = [
    {name = "Alfi Maulana", email = "alfi.maulana.f@gmail.com"},
]
description = "A minimal implementation of the Action Chunking with Transformers (ACT) policy "
readme = "README.md"
license = "MIT"
keywords = ["act", "transformers", "robot-policy"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
mact = "mact.__main__:main"

[project.urls]
repository = "https://github.com/threeal/minimal-act-policy.git"
issues = "https://github.com/threeal/minimal-act-policy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lefthook>=1.11.14",
    "ruff>=0.11.13",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "T201"]
